src/test_parser.output
Nonterminals useless in grammar

   TYPE_QUAL_LIST
   DEC_LIST


Rules useless in grammar

  182 TYPE_QUAL_LIST: TYPE_QUAL
  183               | TYPE_QUAL_LIST TYPE_QUAL


State 284 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT_NODE $end

    1 ROOT_NODE: TRANSLATION_UNIT

    2 PRI_EXPR: T_IDENTIFIER
    3         | T_NUMBER
    4         | T_STR
    5         | T_LBRACKET EXPR T_RBRACKET

    6 POSTFIX_EXPR: PRI_EXPR
    7             | POSTFIX_EXPR T_LSQBRACKET EXPR T_RSQBRACKET
    8             | POSTFIX_EXPR T_LBRACKET T_RBRACKET
    9             | POSTFIX_EXPR T_LBRACKET ARG_EXPR_LIST T_RBRACKET
   10             | POSTFIX_EXPR T_DOT T_IDENTIFIER
   11             | POSTFIX_EXPR T_POINT T_IDENTIFIER
   12             | POSTFIX_EXPR T_INCR
   13             | POSTFIX_EXPR T_DECR

   14 ARG_EXPR_LIST: ASSIGN_EXPR
   15              | ARG_EXPR_LIST T_COMM ASSIGN_EXPR

   16 UNARY_EXPR: POSTFIX_EXPR
   17           | T_INCR UNARY_EXPR
   18           | T_DECR UNARY_EXPR
   19           | UNARY_OP CAST_EXPR
   20           | T_SIZEOF UNARY_EXPR
   21           | T_SIZEOF T_LBRACKET TYPE_NAME T_RBRACKET

   22 UNARY_OP: T_BWAND
   23         | T_STAR
   24         | T_PLUS
   25         | T_MINUS
   26         | T_BWNOT
   27         | T_NOT

   28 CAST_EXPR: UNARY_EXPR
   29          | T_LBRACKET TYPE_NAME T_RBRACKET CAST_EXPR

   30 MULTIPLICATIVE_EXPR: CAST_EXPR
   31                    | MULTIPLICATIVE_EXPR T_STAR CAST_EXPR
   32                    | MULTIPLICATIVE_EXPR T_DIVIDE CAST_EXPR
   33                    | MULTIPLICATIVE_EXPR T_MOD CAST_EXPR

   34 ADDITIVE_EXPR: MULTIPLICATIVE_EXPR
   35              | ADDITIVE_EXPR T_PLUS MULTIPLICATIVE_EXPR
   36              | ADDITIVE_EXPR T_MINUS MULTIPLICATIVE_EXPR

   37 SHFT_EXPR: ADDITIVE_EXPR
   38          | SHFT_EXPR T_LSHIFT ADDITIVE_EXPR
   39          | SHFT_EXPR T_RSHIFT ADDITIVE_EXPR

   40 REL_EXPR: SHFT_EXPR
   41         | REL_EXPR T_LT SHFT_EXPR
   42         | REL_EXPR T_GT SHFT_EXPR
   43         | REL_EXPR T_LTE SHFT_EXPR
   44         | REL_EXPR T_GTE SHFT_EXPR

   45 EQ_EXPR: REL_EXPR
   46        | EQ_EXPR T_EQ REL_EXPR
   47        | EQ_EXPR T_NEQ REL_EXPR

   48 AND_EXPR: EQ_EXPR
   49         | AND_EXPR T_BWAND EQ_EXPR

   50 EXCL_OR_EXPR: AND_EXPR
   51             | EXCL_OR_EXPR T_BWXOR AND_EXPR

   52 INCL_OR_EXPR: EXCL_OR_EXPR
   53             | INCL_OR_EXPR T_OR EXCL_OR_EXPR

   54 LOGI_AND_EXPR: INCL_OR_EXPR
   55              | LOGI_AND_EXPR T_AND INCL_OR_EXPR

   56 LOGI_OR_EXPR: LOGI_AND_EXPR
   57             | LOGI_OR_EXPR T_BWOR LOGI_AND_EXPR

   58 COND_EXPR: LOGI_OR_EXPR
   59          | LOGI_OR_EXPR T_QBEGIN EXPR T_QEND COND_EXPR

   60 ASSIGN_EXPR: COND_EXPR
   61            | UNARY_EXPR ASSIGN_OP ASSIGN_EXPR

   62 ASSIGN_OP: T_ASSIGN
   63          | T_EQMULT
   64          | T_EQDIV
   65          | T_EQMOD
   66          | T_EQPLUS
   67          | T_EQMINUS
   68          | T_EQLSHIFT
   69          | T_EQRSHIFT
   70          | T_EQBWAND
   71          | T_EQEXPONENT
   72          | T_EQBWOR

   73 EXPR: ASSIGN_EXPR
   74     | EXPR T_COMM ASSIGN_EXPR

   75 CONST_EXPR: COND_EXPR

   76 DECL: DECL_SPECS T_SEMI
   77     | DECL_SPECS INIT_DECLARATOR_LIST T_SEMI

   78 DECL_SPECS: STRGE_CLASS_SPEC
   79           | STRGE_CLASS_SPEC DECL_SPECS
   80           | TYPE_SPEC
   81           | TYPE_SPEC DECL_SPECS
   82           | TYPE_QUAL
   83           | TYPE_QUAL DECL_SPECS

   84 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   85                     | INIT_DECLARATOR_LIST T_COMM INIT_DECLARATOR

   86 INIT_DECLARATOR: DECLARATOR
   87                | DECLARATOR T_ASSIGN INIT

   88 STRGE_CLASS_SPEC: T_TYPEDEF
   89                 | T_EXTERN
   90                 | T_STATIC
   91                 | T_AUTO
   92                 | T_REGISTER

   93 TYPE_SPEC: T_VOID
   94          | T_CHAR
   95          | T_SHORT
   96          | T_INT
   97          | T_LONG
   98          | T_FLOAT
   99          | T_DOUBLE
  100          | T_SIGNED
  101          | T_UNSIGNED
  102          | T_TYPE_NAME

  103 SPEC_QUAL_LIST: TYPE_SPEC SPEC_QUAL_LIST
  104               | TYPE_SPEC
  105               | TYPE_QUAL SPEC_QUAL_LIST
  106               | TYPE_QUAL

  107 TYPE_QUAL: T_CONST
  108          | T_VOLATILE

  109 DECLARATOR: DIREC_DECLARATOR

  110 DIREC_DECLARATOR: T_IDENTIFIER
  111                 | T_LBRACKET DECLARATOR T_RBRACKET
  112                 | DIREC_DECLARATOR T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  113                 | DIREC_DECLARATOR T_LSQBRACKET T_RSQBRACKET
  114                 | DIREC_DECLARATOR T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  115                 | DIREC_DECLARATOR T_LBRACKET ID_LIST T_RBRACKET
  116                 | DIREC_DECLARATOR T_LBRACKET T_RBRACKET

  117 PARAM_TYPE_LIST: PARAM_LIST
  118                | PARAM_LIST T_COMM T_ELL

  119 PARAM_LIST: PARAM_DECL
  120           | PARAM_LIST T_COMM PARAM_DECL

  121 PARAM_DECL: DECL_SPECS DECLARATOR
  122           | DECL_SPECS ABST_DECLARATOR
  123           | DECL_SPECS

  124 ID_LIST: T_IDENTIFIER
  125        | ID_LIST T_COMM T_IDENTIFIER

  126 TYPE_NAME: SPEC_QUAL_LIST
  127          | SPEC_QUAL_LIST ABST_DECLARATOR

  128 ABST_DECLARATOR: DIR_ABST_DECLARATOR

  129 DIR_ABST_DECLARATOR: T_LBRACKET ABST_DECLARATOR T_RBRACKET
  130                    | T_LSQBRACKET T_RSQBRACKET
  131                    | T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  132                    | DIR_ABST_DECLARATOR T_LSQBRACKET T_RSQBRACKET
  133                    | DIR_ABST_DECLARATOR T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  134                    | T_LBRACKET T_RBRACKET
  135                    | T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  136                    | DIR_ABST_DECLARATOR T_LBRACKET T_RBRACKET
  137                    | DIR_ABST_DECLARATOR T_LBRACKET PARAM_TYPE_LIST T_RBRACKET

  138 INIT: ASSIGN_EXPR
  139     | T_LCBRACKET INIT_LIST T_RCBRACKET
  140     | T_LCBRACKET INIT_LIST T_COMM T_RCBRACKET

  141 INIT_LIST: INIT
  142          | INIT_LIST T_COMM INIT

  143 STMT: LBL_STMT
  144     | COMP_STMT
  145     | EXPR_STMT
  146     | SELEC_STMT
  147     | ITER_STMT
  148     | JMP_STMT

  149 LBL_STMT: T_IDENTIFIER T_QEND STMT
  150         | T_CASE CONST_EXPR T_QEND STMT
  151         | T_DEFAULT T_QEND STMT

  152 COMP_STMT: T_LCBRACKET T_RCBRACKET
  153          | T_LCBRACKET STMT_LIST T_RCBRACKET
  154          | T_LCBRACKET DECL_LIST T_RCBRACKET
  155          | T_LCBRACKET DECL_LIST STMT_LIST T_RCBRACKET

  156 DECL_LIST: DECL
  157          | DECL_LIST DECL

  158 STMT_LIST: STMT
  159          | STMT_LIST STMT

  160 EXPR_STMT: T_SEMI
  161          | EXPR T_SEMI

  162 SELEC_STMT: T_IF T_LBRACKET EXPR T_RBRACKET STMT
  163           | T_IF T_LBRACKET EXPR T_RBRACKET STMT T_ELSE STMT
  164           | T_SWITCH T_LBRACKET EXPR T_RBRACKET STMT

  165 ITER_STMT: T_WHILE T_LBRACKET EXPR T_RBRACKET STMT
  166          | T_DO STMT T_WHILE T_LBRACKET EXPR T_RBRACKET T_SEMI
  167          | T_FOR T_LBRACKET EXPR_STMT EXPR_STMT T_RBRACKET STMT
  168          | T_FOR T_LBRACKET EXPR_STMT EXPR_STMT EXPR T_RBRACKET STMT

  169 JMP_STMT: T_GOTO T_IDENTIFIER T_SEMI
  170         | T_CONTINUE T_SEMI
  171         | T_BREAK T_SEMI
  172         | T_RETURN T_SEMI
  173         | T_RETURN EXPR T_SEMI

  174 TRANSLATION_UNIT: EXT_DECL
  175                 | TRANSLATION_UNIT EXT_DECL

  176 EXT_DECL: FUNC_DEF
  177         | DECL

  178 FUNC_DEF: DECL_SPECS DECLARATOR DECL_LIST COMP_STMT
  179         | DECL_SPECS DECLARATOR COMP_STMT
  180         | DECLARATOR DECL_LIST COMP_STMT
  181         | DECLARATOR COMP_STMT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUMBER (258) 3
T_IDENTIFIER (259) 2 10 11 110 124 125 149 169
T_STR (260) 4
T_PLUS (261) 24 35
T_MINUS (262) 25 36
T_DIVIDE (263) 32
T_STAR (264) 23 31
T_MOD (265) 33
T_POINT (266) 11
T_INCR (267) 12 17
T_DECR (268) 13 18
T_LSHIFT (269) 38
T_RSHIFT (270) 39
T_EQ (271) 46
T_NEQ (272) 47
T_GT (273) 42
T_GTE (274) 44
T_LT (275) 41
T_LTE (276) 43
T_NOT (277) 27
T_AND (278) 55
T_OR (279) 53
T_BWXOR (280) 51
T_BWAND (281) 22 49
T_BWOR (282) 57
T_BWNOT (283) 26
T_EQMULT (284) 63
T_EQDIV (285) 64
T_EQMOD (286) 65
T_EQPLUS (287) 66
T_EQMINUS (288) 67
T_EQLSHIFT (289) 68
T_EQRSHIFT (290) 69
T_ASSIGN (291) 62 87
T_EQEXPONENT (292) 71
T_EQBWOR (293) 72
T_EQBWAND (294) 70
T_TYPE_NAME (295) 102
T_SIZEOF (296) 20 21
T_SEMI (297) 76 77 160 161 166 169 170 171 172 173
T_QBEGIN (298) 59
T_QEND (299) 59 149 150 151
T_DOT (300) 10
T_COMM (301) 15 74 85 118 120 125 140 142
T_TYPEDEF (302) 88
T_EXTERN (303) 89
T_STATIC (304) 90
T_AUTO (305) 91
T_REGISTER (306) 92
T_CHAR (307) 94
T_SHORT (308) 95
T_INT (309) 96
T_LONG (310) 97
T_SIGNED (311) 100
T_UNSIGNED (312) 101
T_FLOAT (313) 98
T_DOUBLE (314) 99
T_VOLATILE (315) 108
T_VOID (316) 93
T_CONST (317) 107
T_ELL (318) 118
T_LBRACKET (319) 5 8 9 21 29 111 114 115 116 129 134 135 136 137 162
    163 164 165 166 167 168
T_RBRACKET (320) 5 8 9 21 29 111 114 115 116 129 134 135 136 137 162
    163 164 165 166 167 168
T_LSQBRACKET (321) 7 112 113 130 131 132 133
T_RSQBRACKET (322) 7 112 113 130 131 132 133
T_LCBRACKET (323) 139 140 152 153 154 155
T_RCBRACKET (324) 139 140 152 153 154 155
T_CASE (325) 150
T_DEFAULT (326) 151
T_IF (327) 162 163
T_ELSE (328) 163
T_SWITCH (329) 164
T_WHILE (330) 165 166
T_DO (331) 166
T_FOR (332) 167 168
T_GOTO (333) 169
T_CONTINUE (334) 170
T_BREAK (335) 171
T_RETURN (336) 172 173


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
ROOT_NODE (83)
    on left: 1, on right: 0
PRI_EXPR (84)
    on left: 2 3 4 5, on right: 6
POSTFIX_EXPR (85)
    on left: 6 7 8 9 10 11 12 13, on right: 7 8 9 10 11 12 13 16
ARG_EXPR_LIST (86)
    on left: 14 15, on right: 9 15
UNARY_EXPR (87)
    on left: 16 17 18 19 20 21, on right: 17 18 20 28 61
UNARY_OP (88)
    on left: 22 23 24 25 26 27, on right: 19
CAST_EXPR (89)
    on left: 28 29, on right: 19 29 30 31 32 33
MULTIPLICATIVE_EXPR (90)
    on left: 30 31 32 33, on right: 31 32 33 34 35 36
ADDITIVE_EXPR (91)
    on left: 34 35 36, on right: 35 36 37 38 39
SHFT_EXPR (92)
    on left: 37 38 39, on right: 38 39 40 41 42 43 44
REL_EXPR (93)
    on left: 40 41 42 43 44, on right: 41 42 43 44 45 46 47
EQ_EXPR (94)
    on left: 45 46 47, on right: 46 47 48 49
AND_EXPR (95)
    on left: 48 49, on right: 49 50 51
EXCL_OR_EXPR (96)
    on left: 50 51, on right: 51 52 53
INCL_OR_EXPR (97)
    on left: 52 53, on right: 53 54 55
LOGI_AND_EXPR (98)
    on left: 54 55, on right: 55 56 57
LOGI_OR_EXPR (99)
    on left: 56 57, on right: 57 58 59
COND_EXPR (100)
    on left: 58 59, on right: 59 60 75
ASSIGN_EXPR (101)
    on left: 60 61, on right: 14 15 61 73 74 138
ASSIGN_OP (102)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 61
EXPR (103)
    on left: 73 74, on right: 5 7 59 74 161 162 163 164 165 166 168
    173
CONST_EXPR (104)
    on left: 75, on right: 112 131 133 150
DECL (105)
    on left: 76 77, on right: 156 157 177
DECL_SPECS (106)
    on left: 78 79 80 81 82 83, on right: 76 77 79 81 83 121 122 123
    178 179
INIT_DECLARATOR_LIST (107)
    on left: 84 85, on right: 77 85
INIT_DECLARATOR (108)
    on left: 86 87, on right: 84 85
STRGE_CLASS_SPEC (109)
    on left: 88 89 90 91 92, on right: 78 79
TYPE_SPEC (110)
    on left: 93 94 95 96 97 98 99 100 101 102, on right: 80 81 103
    104
SPEC_QUAL_LIST (111)
    on left: 103 104 105 106, on right: 103 105 126 127
TYPE_QUAL (112)
    on left: 107 108, on right: 82 83 105 106
DECLARATOR (113)
    on left: 109, on right: 86 87 111 121 178 179 180 181
DIREC_DECLARATOR (114)
    on left: 110 111 112 113 114 115 116, on right: 109 112 113 114
    115 116
PARAM_TYPE_LIST (115)
    on left: 117 118, on right: 114 135 137
PARAM_LIST (116)
    on left: 119 120, on right: 117 118 120
PARAM_DECL (117)
    on left: 121 122 123, on right: 119 120
ID_LIST (118)
    on left: 124 125, on right: 115 125
TYPE_NAME (119)
    on left: 126 127, on right: 21 29
ABST_DECLARATOR (120)
    on left: 128, on right: 122 127 129
DIR_ABST_DECLARATOR (121)
    on left: 129 130 131 132 133 134 135 136 137, on right: 128 132
    133 136 137
INIT (122)
    on left: 138 139 140, on right: 87 141 142
INIT_LIST (123)
    on left: 141 142, on right: 139 140 142
STMT (124)
    on left: 143 144 145 146 147 148, on right: 149 150 151 158 159
    162 163 164 165 166 167 168
LBL_STMT (125)
    on left: 149 150 151, on right: 143
COMP_STMT (126)
    on left: 152 153 154 155, on right: 144 178 179 180 181
DECL_LIST (127)
    on left: 156 157, on right: 154 155 157 178 180
STMT_LIST (128)
    on left: 158 159, on right: 153 155 159
EXPR_STMT (129)
    on left: 160 161, on right: 145 167 168
SELEC_STMT (130)
    on left: 162 163 164, on right: 146
ITER_STMT (131)
    on left: 165 166 167 168, on right: 147
JMP_STMT (132)
    on left: 169 170 171 172 173, on right: 148
TRANSLATION_UNIT (133)
    on left: 174 175, on right: 1 175
EXT_DECL (134)
    on left: 176 177, on right: 174 175
FUNC_DEF (135)
    on left: 178 179 180 181, on right: 176


State 0

    0 $accept: . ROOT_NODE $end

    T_IDENTIFIER  shift, and go to state 1
    T_TYPE_NAME   shift, and go to state 2
    T_TYPEDEF     shift, and go to state 3
    T_EXTERN      shift, and go to state 4
    T_STATIC      shift, and go to state 5
    T_AUTO        shift, and go to state 6
    T_REGISTER    shift, and go to state 7
    T_CHAR        shift, and go to state 8
    T_SHORT       shift, and go to state 9
    T_INT         shift, and go to state 10
    T_LONG        shift, and go to state 11
    T_SIGNED      shift, and go to state 12
    T_UNSIGNED    shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_DOUBLE      shift, and go to state 15
    T_VOLATILE    shift, and go to state 16
    T_VOID        shift, and go to state 17
    T_CONST       shift, and go to state 18
    T_LBRACKET    shift, and go to state 19

    ROOT_NODE         go to state 20
    DECL              go to state 21
    DECL_SPECS        go to state 22
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25
    DECLARATOR        go to state 26
    DIREC_DECLARATOR  go to state 27
    TRANSLATION_UNIT  go to state 28
    EXT_DECL          go to state 29
    FUNC_DEF          go to state 30


State 1

  110 DIREC_DECLARATOR: T_IDENTIFIER .

    $default  reduce using rule 110 (DIREC_DECLARATOR)


State 2

  102 TYPE_SPEC: T_TYPE_NAME .

    $default  reduce using rule 102 (TYPE_SPEC)


State 3

   88 STRGE_CLASS_SPEC: T_TYPEDEF .

    $default  reduce using rule 88 (STRGE_CLASS_SPEC)


State 4

   89 STRGE_CLASS_SPEC: T_EXTERN .

    $default  reduce using rule 89 (STRGE_CLASS_SPEC)


State 5

   90 STRGE_CLASS_SPEC: T_STATIC .

    $default  reduce using rule 90 (STRGE_CLASS_SPEC)


State 6

   91 STRGE_CLASS_SPEC: T_AUTO .

    $default  reduce using rule 91 (STRGE_CLASS_SPEC)


State 7

   92 STRGE_CLASS_SPEC: T_REGISTER .

    $default  reduce using rule 92 (STRGE_CLASS_SPEC)


State 8

   94 TYPE_SPEC: T_CHAR .

    $default  reduce using rule 94 (TYPE_SPEC)


State 9

   95 TYPE_SPEC: T_SHORT .

    $default  reduce using rule 95 (TYPE_SPEC)


State 10

   96 TYPE_SPEC: T_INT .

    $default  reduce using rule 96 (TYPE_SPEC)


State 11

   97 TYPE_SPEC: T_LONG .

    $default  reduce using rule 97 (TYPE_SPEC)


State 12

  100 TYPE_SPEC: T_SIGNED .

    $default  reduce using rule 100 (TYPE_SPEC)


State 13

  101 TYPE_SPEC: T_UNSIGNED .

    $default  reduce using rule 101 (TYPE_SPEC)


State 14

   98 TYPE_SPEC: T_FLOAT .

    $default  reduce using rule 98 (TYPE_SPEC)


State 15

   99 TYPE_SPEC: T_DOUBLE .

    $default  reduce using rule 99 (TYPE_SPEC)


State 16

  108 TYPE_QUAL: T_VOLATILE .

    $default  reduce using rule 108 (TYPE_QUAL)


State 17

   93 TYPE_SPEC: T_VOID .

    $default  reduce using rule 93 (TYPE_SPEC)


State 18

  107 TYPE_QUAL: T_CONST .

    $default  reduce using rule 107 (TYPE_QUAL)


State 19

  111 DIREC_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_IDENTIFIER  shift, and go to state 1
    T_LBRACKET    shift, and go to state 19

    DECLARATOR        go to state 31
    DIREC_DECLARATOR  go to state 27


State 20

    0 $accept: ROOT_NODE . $end

    $end  shift, and go to state 32


State 21

  177 EXT_DECL: DECL .

    $default  reduce using rule 177 (EXT_DECL)


State 22

   76 DECL: DECL_SPECS . T_SEMI
   77     | DECL_SPECS . INIT_DECLARATOR_LIST T_SEMI
  178 FUNC_DEF: DECL_SPECS . DECLARATOR DECL_LIST COMP_STMT
  179         | DECL_SPECS . DECLARATOR COMP_STMT

    T_IDENTIFIER  shift, and go to state 1
    T_SEMI        shift, and go to state 33
    T_LBRACKET    shift, and go to state 19

    INIT_DECLARATOR_LIST  go to state 34
    INIT_DECLARATOR       go to state 35
    DECLARATOR            go to state 36
    DIREC_DECLARATOR      go to state 27


State 23

   78 DECL_SPECS: STRGE_CLASS_SPEC .
   79           | STRGE_CLASS_SPEC . DECL_SPECS

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_VOLATILE   shift, and go to state 16
    T_VOID       shift, and go to state 17
    T_CONST      shift, and go to state 18

    $default  reduce using rule 78 (DECL_SPECS)

    DECL_SPECS        go to state 37
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25


State 24

   80 DECL_SPECS: TYPE_SPEC .
   81           | TYPE_SPEC . DECL_SPECS

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_VOLATILE   shift, and go to state 16
    T_VOID       shift, and go to state 17
    T_CONST      shift, and go to state 18

    $default  reduce using rule 80 (DECL_SPECS)

    DECL_SPECS        go to state 38
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25


State 25

   82 DECL_SPECS: TYPE_QUAL .
   83           | TYPE_QUAL . DECL_SPECS

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_VOLATILE   shift, and go to state 16
    T_VOID       shift, and go to state 17
    T_CONST      shift, and go to state 18

    $default  reduce using rule 82 (DECL_SPECS)

    DECL_SPECS        go to state 39
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25


State 26

  180 FUNC_DEF: DECLARATOR . DECL_LIST COMP_STMT
  181         | DECLARATOR . COMP_STMT

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_VOLATILE   shift, and go to state 16
    T_VOID       shift, and go to state 17
    T_CONST      shift, and go to state 18
    T_LCBRACKET  shift, and go to state 40

    DECL              go to state 41
    DECL_SPECS        go to state 42
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25
    COMP_STMT         go to state 43
    DECL_LIST         go to state 44


State 27

  109 DECLARATOR: DIREC_DECLARATOR .
  112 DIREC_DECLARATOR: DIREC_DECLARATOR . T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  113                 | DIREC_DECLARATOR . T_LSQBRACKET T_RSQBRACKET
  114                 | DIREC_DECLARATOR . T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  115                 | DIREC_DECLARATOR . T_LBRACKET ID_LIST T_RBRACKET
  116                 | DIREC_DECLARATOR . T_LBRACKET T_RBRACKET

    T_LBRACKET    shift, and go to state 45
    T_LSQBRACKET  shift, and go to state 46

    $default  reduce using rule 109 (DECLARATOR)


State 28

    1 ROOT_NODE: TRANSLATION_UNIT .
  175 TRANSLATION_UNIT: TRANSLATION_UNIT . EXT_DECL

    T_IDENTIFIER  shift, and go to state 1
    T_TYPE_NAME   shift, and go to state 2
    T_TYPEDEF     shift, and go to state 3
    T_EXTERN      shift, and go to state 4
    T_STATIC      shift, and go to state 5
    T_AUTO        shift, and go to state 6
    T_REGISTER    shift, and go to state 7
    T_CHAR        shift, and go to state 8
    T_SHORT       shift, and go to state 9
    T_INT         shift, and go to state 10
    T_LONG        shift, and go to state 11
    T_SIGNED      shift, and go to state 12
    T_UNSIGNED    shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_DOUBLE      shift, and go to state 15
    T_VOLATILE    shift, and go to state 16
    T_VOID        shift, and go to state 17
    T_CONST       shift, and go to state 18
    T_LBRACKET    shift, and go to state 19

    $default  reduce using rule 1 (ROOT_NODE)

    DECL              go to state 21
    DECL_SPECS        go to state 22
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25
    DECLARATOR        go to state 26
    DIREC_DECLARATOR  go to state 27
    EXT_DECL          go to state 47
    FUNC_DEF          go to state 30


State 29

  174 TRANSLATION_UNIT: EXT_DECL .

    $default  reduce using rule 174 (TRANSLATION_UNIT)


State 30

  176 EXT_DECL: FUNC_DEF .

    $default  reduce using rule 176 (EXT_DECL)


State 31

  111 DIREC_DECLARATOR: T_LBRACKET DECLARATOR . T_RBRACKET

    T_RBRACKET  shift, and go to state 48


State 32

    0 $accept: ROOT_NODE $end .

    $default  accept


State 33

   76 DECL: DECL_SPECS T_SEMI .

    $default  reduce using rule 76 (DECL)


State 34

   77 DECL: DECL_SPECS INIT_DECLARATOR_LIST . T_SEMI
   85 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . T_COMM INIT_DECLARATOR

    T_SEMI  shift, and go to state 49
    T_COMM  shift, and go to state 50


State 35

   84 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 84 (INIT_DECLARATOR_LIST)


State 36

   86 INIT_DECLARATOR: DECLARATOR .
   87                | DECLARATOR . T_ASSIGN INIT
  178 FUNC_DEF: DECL_SPECS DECLARATOR . DECL_LIST COMP_STMT
  179         | DECL_SPECS DECLARATOR . COMP_STMT

    T_ASSIGN     shift, and go to state 51
    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_VOLATILE   shift, and go to state 16
    T_VOID       shift, and go to state 17
    T_CONST      shift, and go to state 18
    T_LCBRACKET  shift, and go to state 40

    $default  reduce using rule 86 (INIT_DECLARATOR)

    DECL              go to state 41
    DECL_SPECS        go to state 42
    STRGE_CLASS_SPEC  go to state 23
    TYPE_SPEC         go to state 24
    TYPE_QUAL         go to state 25
    COMP_STMT         go to state 52
    DECL_LIST         go to state 53


State 37

   79 DECL_SPECS: STRGE_CLASS_SPEC DECL_SPECS .

    $default  reduce using rule 79 (DECL_SPECS)


State 38

   81 DECL_SPECS: TYPE_SPEC DECL_SPECS .

    $default  reduce using rule 81 (DECL_SPECS)


State 39

   83 DECL_SPECS: TYPE_QUAL DECL_SPECS .

    $default  reduce using rule 83 (DECL_SPECS)


State 40

  152 COMP_STMT: T_LCBRACKET . T_RCBRACKET
  153          | T_LCBRACKET . STMT_LIST T_RCBRACKET
  154          | T_LCBRACKET . DECL_LIST T_RCBRACKET
  155          | T_LCBRACKET . DECL_LIST STMT_LIST T_RCBRACKET

    T_NUMBER      shift, and go to state 54
    T_IDENTIFIER  shift, and go to state 55
    T_STR         shift, and go to state 56
    T_PLUS        shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_STAR        shift, and go to state 59
    T_INCR        shift, and go to state 60
    T_DECR        shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_BWAND       shift, and go to state 63
    T_BWNOT       shift, and go to state 64
    T_TYPE_NAME   shift, and go to state 2
    T_SIZEOF      shift, and go to state 65
    T_SEMI        shift, and go to state 66
    T_TYPEDEF     shift, and go to state 3
    T_EXTERN      shift, and go to state 4
    T_STATIC      shift, and go to state 5
    T_AUTO        shift, and go to state 6
    T_REGISTER    shift, and go to state 7
    T_CHAR        shift, and go to state 8
    T_SHORT       shift, and go to state 9
    T_INT         shift, and go to state 10
    T_LONG        shift, and go to state 11
    T_SIGNED      shift, and go to state 12
    T_UNSIGNED    shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_DOUBLE      shift, and go to state 15
    T_VOLATILE    shift, and go to state 16
    T_VOID        shift, and go to state 17
    T_CONST       shift, and go to state 18
    T_LBRACKET    shift, and go to state 67
    T_LCBRACKET   shift, and go to state 40
    T_RCBRACKET   shift, and go to state 68
    T_CASE        shift, and go to state 69
    T_DEFAULT     shift, and go to state 70
    T_IF          shift, and go to state 71
    T_SWITCH      shift, and go to state 72
    T_WHILE       shift, and go to state 73
    T_DO          shift, and go to state 74
    T_FOR         shift, and go to state 75
    T_GOTO        shift, and go to state 76
    T_CONTINUE    shift, and go to state 77
    T_BREAK       shift, and go to state 78
    T_RETURN      shift, and go to state 79
